# organization-app

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
app/.erb/configs/: webpack.config.renderer.dev.ts
app/.erb/dll/: preload.js
app/src/main/: main.ts  preload.ts
app/src/renderer/: App.css  App.tsx  index.ejs  index.tsx  taskHelpers.tsx
app/src/renderer/components/: Sidebar.tsx  TaskMini.tsx  scrap
app/src/renderer/pages/: Inbox.tsx
lib/: App.vue  index.html  index.js  main.js
lib/pages/: Home.vue
lib/router/: index.js
native/: Cargo.toml  inbox.json  metadata.json  projects.json
native/src/: lib.rs
src/: main.js
