[package]
name = "organization_app"
version = "0.2.0"
authors = ["muchanem <mark@pztron.io>"]
license = "GPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "organization_app"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
chrono = { version = "0.4", features = ["serde"] } 
time = { version = "0.2", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.4.1"
